--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/* src/tailwind.css */
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +17,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.bar {
+  width: 100%;
+  border-radius: 30px;
+  border: 1px solid #000;
+  display: flex;
+}
+
+.searchbar {
+  background: none;
+  height: 50px;
+  border: none;
+  width: 100%;
+  font-size: 16px;
+  outline: none;
+  margin-left: 15px;
+  color: #000;
+}
+
+.lens-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.lens {
+  height: 25px;
+  cursor: pointer;
 }
