--- a/src/styles.css
+++ b/src/styles.css
@@ -160,12 +160,12 @@
     font-size: 1rem;
   }
 
-  /* section div {
+  section div {
     padding: 30% !important;
-  } */
-
-  video {
-    height: 205px !important;
   }
+
+  /* video {
+    height: 205px !important;
+  } */
 
 }
