--- a/src/styles.css
+++ b/src/styles.css
@@ -227,7 +227,7 @@ video {
     background: url(./assets/background_1080.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    /* background-attachment: fixed; */
+    background-attachment: fixed;
   }
 
   .about-text {
