--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,9 @@ body {
   background: url(./assets/Background_1920.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
 }
+
 
 .Button {
   color: white;
